--- a/Frontend/src/styles/components/team.scss
+++ b/Frontend/src/styles/components/team.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   align-items: center;
 
+  a {
+    color: $white;
+  }
+
   &__left {
     h1 {
       margin-bottom: 0;
