--- a/Frontend/src/styles/components/member-form.scss
+++ b/Frontend/src/styles/components/member-form.scss
@@ -45,3 +45,19 @@
     align-items: center;
   }
 }
+
+.ant-col-rtl {
+  .ant-form-item-explain-error {
+    text-align: left;
+  }
+}
+
+.member-form {
+  padding: 25px;
+
+  .ant-form-item {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
